# smearor

./: .gitignore  404.html  About.html  Addons.html  Addons_Clock.html  Addons_Compliments.html  Addons_Development.html  Architecture.html  Building.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Changelog.html  CodeOfConduct.html  Design.html  Design_System.html  Features.html  Hardware.html  LICENSE  LICENSE.md  License.html  README.md  Requirements.html  book.css  devicon.min.css  index.html  open-props.min.css  print.html  searchindex.js  searchindex.json
.github/workflows/: audit.yml  auto-assign.yml  book.yml  fmt.yml  lint.yml  rust.yml
addons/compliments/: README.md  addon.toml
addons/compliments/model/entities/: compliment.json
docs/: book.css  book.toml  mermaid-init.js
docs/src/: About.md  Addons.md  Addons_Clock.md  Addons_Compliments.md  Addons_Development.md  Architecture.md  Building.md  CNAME  Design.md  Design_System.md  Features.md  Hardware.md  Requirements.md  SUMMARY.md
docs/theme/css/: general.css  variables.css
docs/theme/fonts/: fonts.css
fonts/: fonts.css
modules/smearor/: Cargo.toml  index.html  package.json
modules/smearor/src/: styles.css
modules/smearor/src-tauri/: Cargo.toml  tauri.conf.json5
modules/smearor/src-tauri/capabilities/: default.json  linux.json
modules/smearor/src-tauri/src/: main.rs
smearor-book/: Addons_Compliments.html  Features.html  Hardware.html  print.html  searchindex.js
tools/: mdbook-prerequisites.sh
