[package]
name = "smearor"
description = "Smearor is a smart mirror for your touchscreen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../README.md"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
json5 = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = [ "config-json5" ] }
tauri-plugin-autostart = "2.0.0-beta.2"
tauri-plugin-notification = "2.0.0-beta.2"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta.2"
